fixed extended header on tablet view

--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -631,16 +631,16 @@ aside{height:100%;top:0;left:0;z-index:50;position:absolute}
 section{display:none}
 section.active{position:static;margin-left:268px !important;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;height:100%;display:-webkit-box;display:-ms-box;display:-o-box;display:-moz-box;display:box;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;}
 section.active.footer > article{padding-bottom:0 !important}
-section.active.extended_header > article{top:0 !important}
+section.active.extended_header > article{margin-top:50px}
 header{position:static;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;margin:0;text-align:left;-webkit-box-ordinal-group:1;-moz-box-ordinal-group:1;-ms-box-ordinal-group:1;-o-box-ordinal-group:1;box-ordinal-group:1;}
 header > h1{position:static;text-align:left;width:auto;padding:0 1em;}
 header > h1 > img{width:auto}
+header > nav:after{display:block;content:"";clear:both}
 header > nav.right{position:relative;z-index:103;float:right;}
 header > nav.right > button{margin-right:5px}
-header > nav.right:after{display:block;content:"";clear:both}
 header > nav.left{position:relative;z-index:103;float:right;}
 header > nav.left > button{margin-left:5px}
-header > nav.left:after{display:block;content:"";clear:both}
+header > nav:not(.right):not(.left){position:relative;margin:-17px 0 0 0}
 article{position:static;top:0;overflow-y:scroll;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2}
 footer{position:static;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;-webkit-box-ordinal-group:3;-moz-box-ordinal-group:3;-ms-box-ordinal-group:3;-o-box-ordinal-group:3;box-ordinal-group:3}
 [data-action=aside]{display:none}
